# CS-3270

./: README  README-TESTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  weather_app.db
demo/: demo_usage.py
src/: __init__.py  core.py  data_fetcher.py  data_processor.py  data_store.py  data_visualizer.py  main.py  models.py
tests/: conftest.py  doctests_basic.txt  test_async_parallel.py  test_core.py  test_data_fetcher.py  test_data_processor.py  test_data_store.py  test_data_visualizer.py  test_main.py  test_models.py
webapp/: app.py  database.py  location_encoder.pkl  ml_model.py  models.py
webapp/static/images/: images-10.avif  images-11.avif  images-2.avif  images-3.avif  images-4.avif  images-5.avif  images-6.avif  images-7.avif  images-8.avif  images-9.avif  images.avif
webapp/templates/: base.html  filter.html  index.html  predict.html  statistics.html  visualizations.html
